--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,13 @@ android {
     kotlinOptions {
         jvmTarget = '11'
     }
+
+    viewBinding {
+        enabled = true
+    }
+    buildFeatures {
+        viewBinding = true
+    }
 }
 
 dependencies {
